# hackaping-2025

./: .gitignore  README.md  generated_data.json
api/: pyproject.toml
api/src/api/: __init__.py  conf.py  main.py  models.py  routes.py
api/src/api/clients/: scheduling.py
data_generation/: generate_employee_data.py
frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/app/api/: index.ts
frontend/app/components/: CalendarScheduler.tsx  CustomEvent.tsx  DashboardCard.tsx  RequestAnalysis.tsx  ScheduleChangeForm.tsx  ScheduleTable.tsx  ShiftReviewDisplay.tsx
frontend/app/routes/: home.tsx
frontend/app/types/: index.ts
frontend/src/: App.tsx  root.tsx
frontend/src/api/: index.ts
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/employees/: EmployeeForm.tsx  EmployeeList.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/requests/: ScheduleChangeForm.tsx
frontend/src/components/schedule/: ScheduleView.tsx
frontend/src/components/settings/: SettingsForm.tsx
frontend/src/components/shared/: Alert.tsx  Button.tsx  Card.tsx
frontend/src/entry/: client.tsx  server.tsx
frontend/src/pages/: DashboardPage.tsx  EmployeeFormPage.tsx  EmployeesPage.tsx  RequestsPage.tsx  SchedulePage.tsx  SettingsPage.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: date.ts
util/init-couchbase/src/: main.py
